Sat, 22 Mar 2008 20:45:27 +0100 <thp@perli.net>
Revert previous insanity (where I selected an awful "Transfer" toolbar icon)

	* data/gpodder.glade: I wonder why I selected "gtk-network" as the
	icon for the "Transfer" button on gPodder's toolbar. It surely is
	irritating and illogical as hell.. Hmm. Anyway - now, there is a nice
	"multimedia-player" icon which probably depicts an iPod-like device
	if you use a good icon set. This makes much more sense. Go usability!

Sat, 22 Mar 2008 20:41:54 +0100 <thp@perli.net>
Add "Visit website" menu items to channel and episode list; simple chan menu

	* src/gpodder/gui.py: Add "Visit website" menu items to the context
	menu of both the episode list and the channel navigator; also, make
	the channel context menu easier to use by replacing the old
	"Edit [Channelname]" and "Remove [Channelname]" items with stock items

Sat, 22 Mar 2008 18:41:30 +0100 <thp@perli.net>
Fix "Podcasts not being marked as new when synced to iPod" (#70)

	* src/gpodder/sync.py: Fix bug when podcasts were not marked as new
	when synced to iPod and "on_sync_mark_played" was enabled;
	Bug URL: http://bugs.gpodder.org/show_bug.cgi?id=70
	Thanks to defrex (defrex0 gmail com) for report this bug in Bugzilla

Thu, 20 Mar 2008 11:21:06 +0100 <thp@perli.net>
Delay loading of UserAppsReader and improve libplayers

	* src/gpodder/gui.py: Only load UserAppsReader's database three
	seconds after gPodder start (because we only need it when the user
	opens the preferences dialog, and if she opens it before these three
	seconds, the UserAppsReader data is loaded on demand); because we load
	the database (and generate the model) before we display the
	preferences dialog, the preferences dialog usually comes up faster
	than before (except for the situation where it is opened right after
	gPodder startup); have only one UserAppsReader for audio/video and not
	both (would duplicate the amount of work needed to read desktop