@@ -1,3 +1,10 @@
+Sat, 22 Mar 2008 21:08:06 +0100 <thp@perli.net>
+Make bluetooth device discover a bit nicer
+
+	* src/gpodder/gui.py: Improve bluetooth device discovery button by not
+	destroying its design when it has been clicked and the label is
+	modified
+
 Sat, 22 Mar 2008 20:45:27 +0100 <thp@perli.net>
 Revert previous insanity (where I selected an awful "Transfer" toolbar icon)
 
